--- a/index.html
+++ b/index.html
@@ -450,6 +450,51 @@
       background-color: #1e293b;
     }
     @media (min-width: 1025px) {
+      body {
+        font-size: 1.18rem;
+      }
+      nav h1 {
+        font-size: 1.6rem;
+      }
+      nav ul li {
+        font-size: 1.13rem;
+      }
+      .hero-text-side h1 {
+        font-size: 2.4rem;
+      }
+      .hero-text-side .hero-desc {
+        font-size: 1.28rem;
+        line-height: 1.85;
+      }
+      .card {
+        font-size: 1.28rem;
+      }
+      .card-date {
+        font-size: 1.22rem;
+      }
+      .card ul li {
+        font-size: 1.18rem;
+      }
+      .education-section h2,
+      .research-section h2,
+      .get-in-touch h2,
+      #gallery h2 {
+        font-size: 2.25rem;
+      }
+      .carousel-item h3 {
+        font-size: 1.28rem;
+      }
+      .carousel-item p {
+        font-size: 1.19rem;
+      }
+      .get-in-touch,
+      .education-section,
+      .research-section {
+        font-size: 1.19rem;
+      }
+      footer {
+        font-size: 1.1rem;
+      }
       .profile-pic {
         width: 420px;
         max-width: 420px;
