--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     .profile-pic {
       display: block;
       width: 420px;
-      max-width: 420px;
+      max-width: 600px;
       min-width: 340px;
       margin-top: 3.5rem;
       margin-bottom: 2.2rem;
@@ -201,13 +201,13 @@
       justify-content: center;
       align-items: flex-start;
       background: rgba(15,23,42,0.94);
-      padding: 4rem 3rem;
+      padding: 4rem 8vw;
       min-width: 320px;
       width: 100%;
       max-width: none;
     }
     .hero-text-side h1 {
-      font-size: 2.1rem;
+      font-size: 2.4rem;
       color: #fff;
       font-weight: 700;
       margin-bottom: 0.8rem;
@@ -216,10 +216,10 @@
     }
     .hero-desc {
       color: #fff;
-      font-size: 1.04rem;
+      font-size: 1.28rem;
       margin-bottom: 2.2rem;
-      line-height: 1.7;
-      max-width: 640px;
+      line-height: 1.85;
+      max-width: none;
       text-align: justify;
     }
     .hero-desc a {
@@ -284,9 +284,10 @@
       background: linear-gradient(to right, #e0f2fe, #f8fafc);
       color: #1e293b;
       max-width: none;
+      font-size: 1.19rem;
     }
     .education-section h2 {
-      font-size: 2rem;
+      font-size: 2.25rem;
       font-weight: 700;
       margin-bottom: 2rem;
       text-align: center;
@@ -306,10 +307,10 @@
       padding: 2rem 2.2rem;
       color: #1e293b;
       box-shadow: 0 6px 25px rgba(0, 0, 0, 0.09);
-      max-width: 620px;
+      max-width: none;
       min-width: 340px;
       transition: transform 0.2s ease, box-shadow 0.2s ease;
-      font-size: 1.22rem;
+      font-size: 1.28rem;
     }
     .card:hover, .card:focus-within {
       transform: scale(1.03);
@@ -322,7 +323,7 @@
       color: #0f172a;
     }
     .card-date {
-      font-size: 1.15rem;
+      font-size: 1.22rem;
       font-weight: bold;
       color: #475569;
       margin-bottom: 1.2rem;
@@ -335,7 +336,7 @@
     .card ul li {
       margin-bottom: 0.8rem;
       color: #64748b;
-      font-size: 1.11rem;
+      font-size: 1.18rem;
     }
     .edu-link {
       text-decoration: none;
@@ -352,9 +353,10 @@
       background: linear-gradient(to right, #f8fafc, #e0f2fe);
       color: #1e293b;
       max-width: none;
+      font-size: 1.19rem;
     }
     .research-section h2 {
-      font-size: 2rem;
+      font-size: 2.25rem;
       font-weight: 700;
       margin-bottom: 2rem;
       color: #0f172a;
@@ -382,7 +384,7 @@
     }
     .carousel-item img {
       width: 90vw;
-      max-width: 720px;
+      max-width: 1000px;
       min-width: 320px;
       height: auto;
       border-radius: 12px;
@@ -396,11 +398,11 @@
       max-width: 900px;
     }
     .carousel-item h3 {
-      font-size: 1.19rem;
+      font-size: 1.28rem;
       margin-bottom: 0.7rem;
     }
     .carousel-item p {
-      font-size: 1.13rem;
+      font-size: 1.19rem;
       line-height: 1.65;
       color: #475569;
     }
@@ -445,6 +447,7 @@
       align-items: center;
       justify-content: center;
       max-width: none;
+      font-size: 1.19rem;
     }
     .get-in-touch > * {
       text-align: center;
@@ -455,103 +458,10 @@
       margin-top: 1.5rem;
       padding: 1rem;
       text-align: center;
-      font-size: 0.9rem;
+      font-size: 1.1rem;
       color: #94a3b8;
       background-color: #1e293b;
       max-width: none;
-    }
-    @media (min-width: 1025px) {
-      body {
-        font-size: 1.18rem;
-      }
-      nav h1 {
-        font-size: 1.6rem;
-      }
-      nav ul li {
-        font-size: 1.13rem;
-      }
-      .hero-split {
-        max-width: 100vw;
-      }
-      .hero-img-side,
-      .hero-text-side {
-        max-width: none;
-        min-width: 0;
-        width: 100%;
-      }
-      .hero-text-side {
-        max-width: none;
-        padding-left: 8vw;
-        padding-right: 8vw;
-      }
-      .profile-pic {
-        max-width: 600px;
-      }
-      .card-container, .card {
-        max-width: none;
-      }
-      .carousel-item img {
-        max-width: 1000px;
-      }
-      .hero-text-side h1 {
-        font-size: 2.4rem;
-      }
-      .hero-text-side .hero-desc {
-        font-size: 1.28rem;
-        line-height: 1.85;
-      }
-      .card {
-        font-size: 1.28rem;
-      }
-      .card-date {
-        font-size: 1.22rem;
-      }
-      .card ul li {
-        font-size: 1.18rem;
-      }
-      .education-section h2,
-      .research-section h2,
-      .get-in-touch h2,
-      #gallery h2 {
-        font-size: 2.25rem;
-      }
-      .carousel-item h3 {
-        font-size: 1.28rem;
-      }
-      .carousel-item p {
-        font-size: 1.19rem;
-      }
-      .get-in-touch,
-      .education-section,
-      .research-section {
-        font-size: 1.19rem;
-      }
-      footer {
-        font-size: 1.1rem;
-      }
-      .profile-pic {
-        width: 420px;
-        max-width: 600px;
-        min-width: 340px;
-        margin-top: 3.5rem;
-        margin-bottom: 2.2rem;
-      }
-      .hero-img-side {
-        min-width: 340px;
-        max-width: none;
-        flex-basis: 45%;
-        justify-content: flex-end;
-      }
-      .hero-split {
-        align-items: stretch;
-      }
-      .social-links.hero-social {
-        margin-bottom: 2.7rem;
-        margin-top: 0.5rem;
-      }
-      .hero-text-side {
-        align-items: flex-start;
-      }
     }
     @media (max-width: 1024px) {
       .profile-pic {
@@ -583,6 +493,7 @@
         text-align: center;
         min-width: unset;
         max-width: 100vw;
+        font-size: 1rem;
       }
       .hero-text-side h1, .get-in-touch h2, .education-section h2, .research-section h2 {
         font-size: 1.37rem;
@@ -641,7 +552,6 @@
   </style>
 </head>
 <body>
-  <!-- ... (body content remains unchanged) ... -->
   <nav>
     <h1>@rupam.</h1>
     <ul>
@@ -665,9 +575,149 @@
     </ul>
     <div class="nav-overlay"></div>
   </nav>
-  <!-- (rest of your HTML body content remains the same as before) -->
-  <!-- ... -->
-  <!-- The script block remains unchanged -->
+  <section class="hero-split" id="home">
+    <div class="hero-img-side">
+      <img src="your-profile-picture.jpg" alt="Profile Picture" class="profile-pic" />
+      <div class="social-links hero-social">
+        <a href="https://www.facebook.com/arupam.biswas.007/" target="_blank" class="facebook">
+          <img src="facebookff.jpg" alt="Facebook Logo">
+        </a>
+        <a href="https://www.instagram.com/arupambiswas/" target="_blank" class="instagram">
+          <img src="InstagramF.jpg" alt="Instagram Logo">
+        </a>
+        <a href="https://www.linkedin.com/in/arupam-biswas" target="_blank" class="linkedin">
+          <img src="linkedIn.jpg" alt="LinkedIn Logo">
+        </a>
+        <a href="https://x.com/arupamb07" target="_blank" class="twitter">
+          <img src="twitterFL.jpg" alt="X Logo">
+        </a>
+        <a href="mailto:arupambiswas007[at]gmail[dot]com" target="_blank" class="gmail">
+          <img src="gmail.jpg" alt="Gmail Logo">
+        </a>
+      </div>
+    </div>
+    <div class="hero-text-side">
+      <h1>Greetings Everyone!!</h1>
+      <div class="hero-desc">
+        My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently pursuing my PhD at the 
+        <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
+          Institute of Developmental Biology and Neurobiology (iDN)
+        </a>. My research focuses on developing models and tools for next-generation therapies using precision-engineered artificial biomaterials to support CNS regeneration after traumatic brain injury and neurodegenerative diseases.<br><br>
+        Outside of the lab, I love exploring new cuisines, traveling to discover different cultures, and sharing ideas with fellow scientists and enthusiasts. Collaboration and open-mindedness are key to scientific progress.<br><br>
+        If you are interested in neurobiology, regenerative medicine, or want to collaborate, feel free to get in touch!
+      </div>
+    </div>
+  </section>
+  <section id="education" class="education-section">
+    <h2>Education</h2>
+    <div class="card-container">
+      <div class="card">
+        <h3>PhD in Neuroscience</h3>
+        <p class="card-date">2025–Present</p>
+        <p>
+          <strong>
+            <a href="https://www.uni-mainz.de/" target="_blank" class="edu-link">
+              Johannes Gutenberg University Mainz
+            </a>, Germany.
+          </strong>
+        </p>
+        <ul>
+          <li>Title: Interactive Biomaterials for Neural Regeneration.</li>
+          <li>Principal Investigators: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra, 
+            <a href="https://idn.biologie.uni-mainz.de/" target="_blank" class="edu-link">
+              Institute of Developmental Biology and Neurobiology (iDN)
+            </a>, Germany.
+          </li>
+        </ul>
+      </div>
+      <div class="card">
+        <h3>Five-Year Integrated M.Sc in Lifesciences</h3>
+        <p class="card-date">2019–2024</p>
+        <p>
+          <strong>
+            <a href="https://www.visvabharati.ac.in/index.html" target="_blank" class="edu-link">
+              Visva-Bharati, India
+            </a>
+          </strong>
+        </p>
+        <ul>
+          <li>Master's Thesis: High-Content Screening for neurite growth analyses: Evaluating gene treatments</li>
+          <li>Principal Investigator: 
+            <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" class="edu-link">
+              Dr. Ishwariya Venkatesh
+            </a>, Senior Scientist,
+            <a href="https://www.ccmb.res.in/" target="_blank" class="edu-link">
+              CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB)
+            </a>, India
+          </li>
+        </ul>
+      </div>
+    </div>
+  </section>
+  <section id="research" class="research-section">
+    <h2>Research</h2>
+    <div class="carousel">
+      <div class="carousel-track">
+        <div class="carousel-item">
+          <img src="Neural-cells-Biomaterials.jpg" alt="Project 1">
+          <div class="item-info">
+            <h3>PhD Topic: Interactive Biomaterials for Neural Regeneration (InteReg)</h3>
+            <p>
+              Traumatic CNS injuries and diseases like MS lead to lasting disability due to poor regenerative capacity. Barriers include glial scarring, inhibitory debris, lack of axonal guidance, and more. The 
+              <a href="https://intereg.uni-mainz.de/" target="_blank" style="text-decoration: none; color: inherit;">
+                Interactive Biomaterials for Neural Regeneration (InteReg)
+              </a> project is a five-year collaboration between Johannes Gutenberg University Mainz, the Max Planck Institute for Polymer Research, and the Leibniz Institute for Resilience Research, aiming to engineer materials that can help guide and promote nerve regeneration.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="msdissertation.jpg" alt="Project 2">
+          <div class="item-info">
+            <h3>Master's Thesis: High-Content Screening for neurite growth analyses: Evaluating gene treatments</h3>
+            <p>
+              Neurons in the central nervous system (CNS), including the brain and spinal cord, send out axons to make connections. In mammals, these axons can't regrow after injury, leading to permanent loss of function. My thesis investigated gene therapies that could stimulate regrowth, using high-content screening methods to analyze neurite extension.
+            </p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <img src="project3.jpg" alt="Project 3">
+          <div class="item-info">
+            <h3>Project Title 3</h3>
+            <p>A quick summary of the research and its significance.</p>
+          </div>
+        </div>
+      </div>
+      <button class="carousel-button prev">‹</button>
+      <button class="carousel-button next">›</button>
+    </div>
+  </section>
+  <section id="gallery">
+    <h2>Gallery</h2>
+    <p>Gallery coming soon! Here you'll find photos from conferences, lab work, and travels.</p>
+  </section>
+  <section class="get-in-touch" id="get-in-touch">
+    <h2>Get in Touch</h2>
+    <p><strong>Email:</strong> arupambiswas007[at]gmail[dot]com</p>
+    <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, 
+      <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">
+        Venkatesh Lab
+      </a> CSIR-CCMB
+    </p>
+    <p><strong>Address:</strong><br>
+      Institute for Developmental Biology and Neurobiology (iDN)<br>
+      Johannes Gutenberg University Mainz<br>
+      Biozentrum 1<br>
+      Hanns-Dieter-Hüsch-Weg 15<br>
+      55128 Mainz<br>
+      Germany
+    </p>
+    <p>
+      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
+    </p>
+  </section>
+  <footer>
+    © 2025 Arupam Biswas. All rights reserved.
+  </footer>
   <script>
     const hamburgerBtn = document.querySelector('.hamburger');
     const mobileNav = document.querySelector('.nav-links-mobile');
