--- a/index.html
+++ b/index.html
@@ -792,8 +792,8 @@
     </div>
     <div class="gallery-grid">
       <div class="gallery-item" data-tags="lab">
-        <img src="photo_lab1.jpg" alt="Lab work 1" />
-        <div class="caption">Microscopy session</div>
+        <img src="Retreat.png" alt="Lab work 1" />
+        <div class="caption">IV-Lab Retreat 2024</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
         <img src="photo_conf1.jpg" alt="Conference 1" />
