--- a/index.html
+++ b/index.html
@@ -794,18 +794,24 @@
       <div class="gallery-item" data-tags="lab">
         <img src="Retreat.png" alt="Lab work 1" />
         <div class="caption">IV-Lab Retreat 2024</div>
+        <img src="JNCASR.png" alt="Lab work 2" />
+        <div class="caption">JNCASR- Prof. Sheeba Basu and Her Team</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
-        <img src="photo_conf1.jpg" alt="Conference 1" />
-        <div class="caption">Presenting at NeuroConf 2024</div>
+        <img src="presentationhysci" alt="Conference 1" />
+        <div class="caption">HySci'24(IIT-Hyderabad)</div>
+        <img src="SURGE.jpg" alt="Conference 2" />
+        <div class="caption">Summer Internship-IIT Kanpur'23</div>
       </div>
       <div class="gallery-item" data-tags="travels">
         <img src="photo_travel1.jpg" alt="Travel 1" />
         <div class="caption">Exploring Heidelberg</div>
       </div>
       <div class="gallery-item" data-tags="lab conferences">
-        <img src="photo_lab2.jpg" alt="Lab & Conference" />
-        <div class="caption">Poster session with team</div>
+        <img src="Hysci.jpg" alt="Lab & Conference" />
+        <div class="caption">HySci: Hyderabad Chapter(April, 2024)</div>
+        <img src="CMMDR.jpg" alt="Lab & Conference" />
+        <div class="caption">Cellular and Molecular Mechanisms of Development and Regeneration: Shiv Nadar University(February, 2024)</div>
       </div>
       <div class="gallery-item" data-tags="travels">
         <img src="photo_travel2.jpg" alt="Travel 2" />
