--- a/index.html
+++ b/index.html
@@ -798,11 +798,11 @@
         <div class="caption">IV-Lab Retreat 2024</div>
       </div>
       <div class="gallery-item" data-tags="lab">
-        <img src="JNCASR.png" alt="Lab work 2" />
+        <img src="JNCASR.jpg" alt="Lab work 2" />
         <div class="caption">JNCASR- Prof. Sheeba Basu and Her Team</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
-        <img src="presentationhysci" alt="Conference 1" />
+        <img src="presentationhysci.jpg" alt="Conference 1" />
         <div class="caption">HySci'24(IIT-Hyderabad)</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
