--- a/index.html
+++ b/index.html
@@ -809,17 +809,17 @@
         <img src="SURGE.jpg" alt="Conference 2" />
         <div class="caption">Summer Internship-IIT Kanpur'23</div>
       </div>
-      <div class="gallery-item" data-tags="travels">
-        <img src="photo_travel1.jpg" alt="Travel 1" />
-        <div class="caption">Exploring Heidelberg</div>
-      </div>
-      <div class="gallery-item" data-tags="lab conferences">
-        <img src="Hysci.jpg" alt="Lab & Conference" />
+      <div class="gallery-item" data-tags="conferences">
+        <img src="Hysci.jpg" alt="Conference 3" />
         <div class="caption">HySci: Hyderabad Chapter(April, 2024)</div>
       </div>
       <div class="gallery-item" data-tags="lab conferences">
         <img src="CMMDR.jpg" alt="Lab & Conference" />
         <div class="caption">Cellular and Molecular Mechanisms of Development and Regeneration: Shiv Nadar University(February, 2024)</div>
+      </div>
+      <div class="gallery-item" data-tags="travels">
+        <img src="photo_travel1.jpg" alt="Travel 1" />
+        <div class="caption">Exploring Heidelberg</div>
       </div>
       <div class="gallery-item" data-tags="travels">
         <img src="photo_travel2.jpg" alt="Travel 2" />
