--- a/index.html
+++ b/index.html
@@ -813,8 +813,8 @@
         <img src="Hysci.jpg" alt="Conference 3" />
         <div class="caption">HySci: Hyderabad Chapter(April, 2024)</div>
       </div>
-      <div class="gallery-item" data-tags="lab conferences">
-        <img src="CMMDR.jpg" alt="Lab & Conference" />
+      <div class="gallery-item" data-tags="conferences">
+        <img src="CMMDR.jpg" alt="Conference 4" />
         <div class="caption">Cellular and Molecular Mechanisms of Development and Regeneration: Shiv Nadar University(February, 2024)</div>
       </div>
       <div class="gallery-item" data-tags="travels">
