--- a/index.html
+++ b/index.html
@@ -795,11 +795,11 @@
     <div class="gallery-grid">
       <div class="gallery-item" data-tags="lab">
         <img src="Retreat.png" alt="Lab work 1" />
-        <div class="caption">IV-Lab Retreat 2024</div>
+        <div class="caption">Laboratory of Axon Growth and Regeneration: Dr. Ishwariya Venkatesh & Team</div>
       </div>
       <div class="gallery-item" data-tags="lab">
-        <img src="JNCASR.jpg" alt="Lab work 2" />
-        <div class="caption">JNCASR- Prof. Sheeba Basu and Her Team</div>
+        <img src="JNCASR2.jpg" alt="Lab work 2" />
+        <div class="caption">Chronobiology and Behavioural Neurogenetics Lab: Prof. Dr. Sheeba Basu & Team</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
         <img src="presentationhysci.jpg" alt="Conference 1" />
