--- a/index.html
+++ b/index.html
@@ -801,6 +801,10 @@
         <img src="JNCASR2.jpg" alt="Lab work 2" />
         <div class="caption">Chronobiology and Behavioural Neurogenetics Lab: Prof. Dr. Sheeba Basu & Team</div>
       </div>
+      <div class="gallery-item" data-tags="lab">
+        <img src="ACTREC.jpg" alt="Lab work 3" />
+        <div class="caption">Autophagy Lab: Dr. Pritha Ray & Team</div>
+      </div>
       <div class="gallery-item" data-tags="conferences">
         <img src="presentationhysci.jpg" alt="Conference 1" />
         <div class="caption">HySci'24(IIT-Hyderabad)</div>
