--- a/index.html
+++ b/index.html
@@ -835,10 +835,10 @@
   <section class="get-in-touch" id="get-in-touch">
     <h2>Get in Touch</h2>
     <p><strong>Email:</strong> arupambiswas007[at]gmail[dot]com</p>
-    <p><strong>Lab:</strong> Dr Ishwariya Venkatesh, 
-      <a href="https://www.ccmb.res.in/research/labs/venkatesh-lab" target="_blank">
-        Venkatesh Lab
-      </a> CSIR-CCMB
+    <p><strong>Lab:</strong> Prof. Dr. Martin Heine,
+      <a href="https://fnb-idn.biologie.uni-mainz.de/">
+        Functional Neurobiology Lab
+      </a> JGU
     </p>
     <p><strong>Address:</strong><br>
       Institute for Developmental Biology and Neurobiology (iDN)<br>
@@ -849,7 +849,7 @@
       Germany
     </p>
     <p>
-      Feel free to reach out regarding research collaborations, speaking engagements, or questions about my work. I'm always open to discussing new ideas and potential partnerships.
+      Feel free to reach out regarding research collaborations, speaking engagements, or discussing new ideas and potential partnerships.
     </p>
   </section>
   <footer>
