--- a/index.html
+++ b/index.html
@@ -645,7 +645,7 @@
 </head>
 <body>
   <nav>
-    <h1>@rupam.</h1>
+    <h1>Arup@m.</h1>
     <ul>
       <li><a href="#home">Home</a></li>
       <li><a href="#education">Education</a></li>
@@ -717,18 +717,18 @@
           <li>Title: Interactive Biomaterials for Neural Regeneration.</li>
           <li>Principal Investigators: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra, 
             <a href="https://idn.biologie.uni-mainz.de/" target="_blank" class="edu-link">
-              Institute of Developmental Biology and Neurobiology (iDN)
-            </a>, Germany.
+              Institute of Developmental Biology and Neurobiology (iDN), Germany.
+            </a>
           </li>
         </ul>
       </div>
       <div class="card">
-        <h3>Five-Year Integrated M.Sc in Lifesciences</h3>
+        <h3>Five-Year Integrated M.Sc in Life Sciences</h3>
         <p class="card-date">2019–2024</p>
         <p>
           <strong>
             <a href="https://www.visvabharati.ac.in/index.html" target="_blank" class="edu-link">
-              Visva-Bharati, India
+              Visva-Bharati, India.
             </a>
           </strong>
         </p>
@@ -838,7 +838,7 @@
     <p><strong>Lab:</strong> Prof. Dr. Martin Heine,
       <a href="https://fnb-idn.biologie.uni-mainz.de/">
         Functional Neurobiology Lab
-      </a> JGU
+      </a> at JGU
     </p>
     <p><strong>Address:</strong><br>
       Institute for Developmental Biology and Neurobiology (iDN)<br>
