--- a/index.html
+++ b/index.html
@@ -806,16 +806,12 @@
         <div class="caption">Autophagy Lab: Dr. Pritha Ray & Team</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
-        <img src="presentationhysci.jpg" alt="Conference 1" />
-        <div class="caption">HySci'24(IIT-Hyderabad)</div>
+        <img src="IITH.jpg" alt="Conference 1" />
+        <div class="caption">HySci: IIT-Hyderabad Chapter(April, 2024)</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
         <img src="SURGE.jpg" alt="Conference 2" />
         <div class="caption">Summer Internship-IIT Kanpur'23</div>
-      </div>
-      <div class="gallery-item" data-tags="conferences">
-        <img src="Hysci.jpg" alt="Conference 3" />
-        <div class="caption">HySci: Hyderabad Chapter(April, 2024)</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
         <img src="CMMDR.jpg" alt="Conference 4" />
