--- a/index.html
+++ b/index.html
@@ -818,12 +818,8 @@
         <div class="caption">Summer Internship-IIT Kanpur'23</div>
       </div>
       <div class="gallery-item" data-tags="travels">
-        <img src="photo_travel1.jpg" alt="Travel 1" />
-        <div class="caption">Exploring Heidelberg</div>
-      </div>
-      <div class="gallery-item" data-tags="travels">
-        <img src="photo_travel2.jpg" alt="Travel 2" />
-        <div class="caption">Mainz city walk</div>
+        <img src="Hills.jpg" alt="Travel 1" />
+        <div class="caption">Kharghar Hills</div>
       </div>
       <!-- Add more .gallery-item as needed, data-tags can be space-separated for multiple tags -->
     </div>
