--- a/index.html
+++ b/index.html
@@ -818,8 +818,8 @@
         <div class="caption">Summer Internship-IIT Kanpur'23</div>
       </div>
       <div class="gallery-item" data-tags="travels">
-        <img src="Hills.jpg" alt="Travel 1" />
-        <div class="caption">Kharghar Hills</div>
+        <img src="travel.jpg" alt="Travel 1" />
+        <div class="caption">Travel1</div>
       </div>
       <!-- Add more .gallery-item as needed, data-tags can be space-separated for multiple tags -->
     </div>
