--- a/index.html
+++ b/index.html
@@ -689,7 +689,7 @@
       </div>
     </div>
     <div class="hero-text-side">
-      <h1>Greetings Everyone!!</h1>
+      <h1>Hello Everyone!!</h1>
       <div class="hero-desc">
         My name is Arupam Biswas, and I’m a Neuroscience Researcher exploring how the central nervous system heals, adapts, and thrives. My journey began in India and led me to Germany, where I am currently pursuing my PhD at the 
         <a href="https://idn.biologie.uni-mainz.de/" target="_blank">
@@ -818,9 +818,13 @@
         <div class="caption">Summer Internship-IIT Kanpur'23</div>
       </div>
       <div class="gallery-item" data-tags="travels">
-        <img src="travel.jpg" alt="Travel 1" />
-        <div class="caption">Travel1</div>
+        <img src="Travel1.jpg" alt="Travel 1" />
+        <div class="caption">Retreat of IV-Lab: Hyderabad Chapter </div>
       </div>
+      <div class="gallery-item" data-tags="travels">
+        <img src="Travel3.jpg" alt="Travel 2" />
+        <div class="caption">Trip to Nandi Hills: Bengaluru Chapter</div>
+         </div>
       <!-- Add more .gallery-item as needed, data-tags can be space-separated for multiple tags -->
     </div>
   </section>
