--- a/index.html
+++ b/index.html
@@ -715,7 +715,7 @@
         </p>
         <ul>
           <li>Title: Interactive Biomaterials for Neural Regeneration.</li>
-          <li>Principal Investigators: Prof. Dr. Claire Jacob, Prof. Dr. Martin Heine, Dr. Himanshu Kumar Mishra, 
+          <li>Principal Investigators: Prof. Dr. Martin Heine, Prof. Dr. Claire Jacob, Dr. Himanshu Kumar Mishra, 
             <a href="https://idn.biologie.uni-mainz.de/" target="_blank" class="edu-link">
               Institute of Developmental Biology and Neurobiology (iDN), Germany.
             </a>
@@ -736,11 +736,11 @@
           <li>Master's Thesis: High-Content Screening for neurite growth analyses: Evaluating gene treatments</li>
           <li>Principal Investigator: 
             <a href="https://www.ccmb.res.in/People/Research-Group/Ishwariya-Venkatesh" target="_blank" class="edu-link">
-              Dr. Ishwariya Venkatesh
-            </a>, Senior Scientist,
+              Dr. Ishwariya Venkatesh,
+            </a>Senior Scientist,
             <a href="https://www.ccmb.res.in/" target="_blank" class="edu-link">
               CSIR-Centre for Cellular and Molecular Biology (CSIR-CCMB)
-            </a>, India
+            </a>, India.
           </li>
         </ul>
       </div>
