--- a/index.html
+++ b/index.html
@@ -845,7 +845,7 @@
       Germany
     </p>
     <p>
-      Feel free to reach out regarding research collaborations, speaking engagements, or discussing new ideas and potential partnerships.
+      Feel free to reach out regarding research collaborations, speaking engagements, or discussing new ideas.
     </p>
   </section>
   <footer>
