--- a/index.html
+++ b/index.html
@@ -294,59 +294,96 @@
       text-align: center;
       color: #0f172a;
     }
-    /* Modern List with Logos Style */
+    /* --- Visually Attractive List With Logos --- */
     .edu-list {
       list-style: none;
       padding: 0;
       margin: 0 auto;
       max-width: 900px;
+      position: relative;
     }
     .edu-list li {
       display: flex;
-      align-items: flex-start;
+      align-items: center;
       gap: 1.5rem;
-      background: #fff;
-      border-radius: 16px;
-      box-shadow: 0 6px 25px rgba(0, 0, 0, 0.09);
-      margin-bottom: 2.2rem;
-      padding: 2rem 2.2rem;
+      position: relative;
+      border-left: 8px solid #38bdf8;
+      background: linear-gradient(135deg, #e0f2fe 90%, #b6e0fe 100%);
+      border-radius: 18px;
+      box-shadow: 0 6px 25px rgba(56,189,248,0.09);
+      margin-bottom: 2.7rem;
+      padding: 2.2rem 2.2rem 2.2rem 2.4rem;
       color: #1e293b;
       font-size: 1.22rem;
-      transition: box-shadow 0.2s;
+      transition: transform 0.18s, box-shadow 0.18s, background 0.23s;
+    }
+    .edu-list li:nth-child(2) {
+      border-left: 8px solid #ffb703;
+      background: linear-gradient(135deg, #fffbe0 90%, #ffe5b4 100%);
     }
     .edu-list li:hover {
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.17);
+      transform: scale(1.03) translateY(-4px);
+      box-shadow: 0 12px 40px rgba(56,189,248,0.13);
+      background: linear-gradient(135deg, #e0f2fe 55%, #caf0f8 100%);
     }
     .edu-logo {
-      width: 58px;
-      height: 58px;
-      object-fit: contain;
-      border-radius: 11px;
-      box-shadow: 0 2px 8px rgba(30,41,59,0.11);
-      flex-shrink: 0;
+      width: 56px; height: 56px; border-radius: 50%;
       background: #fff;
-      margin-top: 0.2rem;
+      box-shadow: 0 4px 24px rgba(56,189,248,0.13), 0 0 0 8px #e0f2fe;
+      padding: 8px;
+      flex-shrink: 0;
+      object-fit: contain;
+      transition: box-shadow 0.2s, transform 0.2s;
     }
-    .edu-date {
-      color: #475569;
+    .edu-list li strong {
+      font-size: 1.32rem;
+      color: #0f172a;
+      font-weight: 700;
+      letter-spacing: 0.5px;
+    }
+    .edu-list li .edu-date {
       font-size: 1.05rem;
-      font-weight: bold;
-      margin-left: 0.3em;
+      font-weight: 600;
+      color: #64748b;
+      margin-left: 0.6em;
     }
-    .edu-list .edu-link {
-      color: #0a66c2;
+    .edu-list li a.edu-link {
+      font-size: 1.09rem;
+      font-weight: 600;
+      color: #0077b6;
       text-decoration: none;
-      font-weight: 500;
+      transition: color 0.2s;
     }
-    .edu-list .edu-link:hover,
-    .edu-list .edu-link:focus {
+    .edu-list li a.edu-link:hover, .edu-list li a.edu-link:focus {
       text-decoration: underline;
+      color: #035388;
+    }
+    .edu-list li ul {
+      margin-top: 0.7em;
+      padding-left: 1.35em;
+      color: #64748b;
+      font-size: 1.08rem;
+    }
+    .edu-list li::before {
+      content: '';
+      display: block;
+      position: absolute;
+      left: -30px;
+      top: 32px;
+      width: 18px;
+      height: 18px;
+      border-radius: 50%;
+      background: #38bdf8;
+      box-shadow: 0 2px 8px rgba(56,189,248,0.25);
+    }
+    .edu-list li:nth-child(2)::before {
+      background: #ffb703;
     }
     @media (max-width: 700px) {
       .edu-list li {
         flex-direction: column;
         align-items: flex-start;
-        padding: 1.2rem 0.7rem;
+        padding: 1.3rem 0.7rem 1.3rem 2.1rem;
         font-size: 1rem;
         gap: 0.7rem;
       }
@@ -354,8 +391,16 @@
         width: 38px;
         height: 38px;
         margin-bottom: 0.6rem;
+        padding: 4px;
+      }
+      .edu-list li::before {
+        top: 16px;
+        left: -23px;
+        width: 13px;
+        height: 13px;
       }
     }
+    /* --- End Visually Attractive List With Logos --- */
     .research-section {
       padding: 3rem 1rem 2rem 1rem;
       background: linear-gradient(to right, #f8fafc, #e0f2fe);
