--- a/index.html
+++ b/index.html
@@ -750,7 +750,7 @@
     <h2>Education</h2>
     <ul class="edu-list">
       <li>
-        <img src="mainz-logo.png" class="edu-logo" alt="Johannes Gutenberg University Mainz Logo" />
+        <img src="JGU.jpg" class="edu-logo" alt="Johannes Gutenberg University Mainz Logo" />
         <div>
           <strong>PhD in Neuroscience</strong> <span class="edu-date">(2025–Present)</span><br>
           <a href="https://www.uni-mainz.de/" target="_blank" class="edu-link">
@@ -768,7 +768,7 @@
         </div>
       </li>
       <li>
-        <img src="vb-logo.png" class="edu-logo" alt="Visva-Bharati Logo" />
+        <img src="VB.jpg" class="edu-logo" alt="Visva-Bharati Logo" />
         <div>
           <strong>Five-Year Integrated M.Sc in Life Sciences</strong> <span class="edu-date">(2019–2024)</span><br>
           <a href="https://www.visvabharati.ac.in/index.html" target="_blank" class="edu-link">
