--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
       min-width: 0;
       width: 100%;
       background: none;
-      padding-top: 2.5rem;
+      padding-top: 0.5rem;
     }
     .profile-pic {
       display: block;
@@ -183,7 +183,7 @@
       max-width: 700px;
       min-width: 420px;
       margin-top: 0rem;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
       border-radius: 18px;
       box-shadow: 0 4px 20px rgba(18,19,32,0.13);
       object-fit: cover;
@@ -193,8 +193,8 @@
     }
     .social-links.hero-social {
       position: static;
-      margin-top: 0.2rem;
-      margin-bottom: 1.2rem;
+      margin-top: 0rem;
+      margin-bottom: 0.5rem;
       background: rgba(16,22,41,0.14);
       display: flex;
       justify-content: center;
@@ -672,19 +672,15 @@
       .edu-timeline-modern::before { left: 36px; }
       .edu-item { gap: 0.7rem; }
     }
-    @media (max-width: 700px) {
-      .profile-pic { width: 95vw; max-width: 95vw; min-width: 0; }
-      .hero-split { flex-direction: column; min-height: unset; }
-      .hero-img-side { min-height: 220px; height: auto; width: 100vw; position: relative; flex-basis: unset; max-width: 100vw; }
-      .social-links.hero-social { margin-top: 1.2rem; margin-bottom: 0.5rem; }
-      .hero-text-side { align-items: center; padding: 2.7rem 7vw 2rem 7vw; text-align: center; }
-      .hero-text-side h1, .get-in-touch h2, .education-section h2, .research-section h2 { font-size: 1.37rem; }
-      .hero-desc { font-size: 1rem; max-width: 640px; }
-      .carousel-item img { max-width: 95vw; }
-      .get-in-touch, .education-section, .research-section { padding-left: 7vw !important; padding-right: 7vw !important; }
-      .social-links a, .social-links.hero-social a { width: 42px; height: 42px; }
-      .social-links a img, .social-links.hero-social a img { width: 22px; height: 22px; }
-      .gallery-grid { grid-template-columns: repeat(auto-fit, minmax(190px, 1fr)); gap: 1rem; }
+    @media (max-width: 800px) {
+      .profile-pic { width: 90vw; min-width: 0; max-width: 98vw; }
+      .hero-img-side { padding-top: 0.7rem; }
+      .social-links.hero-social { margin-top: 0.3rem; margin-bottom: 0.3rem; }
+      .hero-text-side { padding: 1.5rem 4vw 1rem 4vw; }
+      .ed-title { font-size: 1.35rem; }
+      .edu-item { gap: 0.5rem; padding: 1rem 0.5rem; font-size: 1.02rem; }
+      .edu-degree, .edu-institute, .edu-institution, .edu-thesis, .edu-pis { font-size: 1.01rem;}
+      .edu-year { font-size: 1rem; padding: 3px 10px;}
     }
     @media (max-width: 500px) {
       .gallery-grid { grid-template-columns: 1fr; }
@@ -696,6 +692,8 @@
       .edu-logo-box img { width: 34px; height: 34px; }
       .edu-row { flex-direction: column; gap: 0.1em; align-items: flex-start;}
       .edu-year { margin-left: 0; margin-top: 0.1em;}
+      .profile-pic { width: 93vw; min-width: 0; margin-bottom: 0.3rem;}
+      .social-links.hero-social { margin-top: 0.1rem; margin-bottom: 0.1rem; }
     }
   </style>
 </head>
