--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
       min-height: 90vh;
       width: 100vw;
       max-width: 100vw;
-      background: #0f172a;
+      background: linear-gradient(120deg, #fafdff 90%, #bae6fd 100%);
       font-family: 'Montserrat', 'Outfit', Arial, sans-serif;
     }
     .hero-img-side {
@@ -170,20 +170,19 @@
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: flex-start;
+      justify-content: flex-end;
       max-width: none;
       min-width: 0;
       width: 100%;
       background: none;
-      padding-top: 2.5rem;
     }
     .profile-pic {
       display: block;
       width: 540px;
       max-width: 700px;
       min-width: 420px;
-      margin-top: 0rem;
-      margin-bottom: 1rem;
+      margin-top: 3.5rem;
+      margin-bottom: 2.2rem;
       border-radius: 18px;
       box-shadow: 0 4px 20px rgba(18,19,32,0.13);
       object-fit: cover;
@@ -193,8 +192,8 @@
     }
     .social-links.hero-social {
       position: static;
-      margin-top: 0.2rem;
-      margin-bottom: 1.2rem;
+      margin-top: 0.5rem;
+      margin-bottom: 2.7rem;
       background: rgba(16,22,41,0.14);
       display: flex;
       justify-content: center;
@@ -205,6 +204,7 @@
       width: fit-content;
       box-shadow: 0 2px 8px rgba(16,22,41,0.09);
     }
+    .hero-text-side .social-links { display: none !important; }
     .hero-text-side {
       flex: 3;
       display: flex;
@@ -303,13 +303,13 @@
     .ed-title {
       font-family: 'Pacifico', cursive;
       text-align: center;
-      font-size: 2.5rem;
+      font-size: 2.2rem;
       color: #1976d2;
       margin-bottom: 2.7rem;
       letter-spacing: 1.3px;
     }
     .edu-timeline-modern {
-      max-width: 1320px;
+      max-width: 1060px;
       margin: 0 auto;
       display: flex;
       flex-direction: column;
@@ -332,16 +332,15 @@
     .edu-item {
       display: flex;
       align-items: flex-start;
-      gap: 4.5rem;
+      gap: 3.2rem;
       position: relative;
       z-index: 1;
       background: #fff;
       border-radius: 20px;
       box-shadow: 0 6px 36px #bae6fd30, 0 2px 6px #1976d211;
-      padding: 3.1rem 4.2rem 3.1rem 4.2rem;
+      padding: 2.1rem 2.7rem 2.1rem 2.7rem;
       transition: box-shadow 0.22s, transform 0.18s;
       min-height: 180px;
-      font-size: 1.31rem;
     }
     .edu-item:hover {
       box-shadow: 0 12px 48px #1976d221, 0 4px 16px #1976d215;
@@ -377,7 +376,7 @@
       flex: 1;
       display: flex;
       flex-direction: column;
-      gap: 0.22rem;
+      gap: 0.18rem;
       min-width: 0;
     }
     .edu-row {
@@ -389,7 +388,7 @@
     }
     .edu-degree {
       font-family: 'Montserrat', sans-serif;
-      font-size: 1.57rem;
+      font-size: 1.33rem;
       font-weight: 700;
       color: #0f172a;
       letter-spacing: 0.1px;
@@ -397,7 +396,7 @@
     .edu-major {
       color: #1976d2;
       font-family: 'Pacifico', cursive;
-      font-size: 1.15em;
+      font-size: 1.09em;
       margin-left: 0.08em;
     }
     .edu-year {
@@ -405,15 +404,15 @@
       color: #1976d2;
       background: #e0f2fe;
       border-radius: 7px;
-      font-size: 1.21rem;
-      padding: 6px 24px;
+      font-size: 1.07rem;
+      padding: 4px 16px;
       font-weight: 700;
       letter-spacing: 1.3px;
       margin-left: auto;
     }
     .edu-institute {
       font-family: 'Montserrat', sans-serif;
-      font-size: 1.21rem;
+      font-size: 1.17rem;
       font-weight: 700;
       margin-top: 0.24rem;
       letter-spacing: 0.12px;
@@ -423,7 +422,7 @@
     .edu-country {
       font-family: 'Fira Mono', monospace;
       color: #64748b;
-      font-size: 1.13rem;
+      font-size: 1.07rem;
       margin-left: 1.1em;
     }
     .edu-institution,
@@ -431,7 +430,7 @@
     .edu-pis {
       color: #232323;
       font-family: 'Outfit', 'Montserrat', Arial, sans-serif;
-      font-size: 1.17rem;
+      font-size: 1.09rem;
       font-weight: 400;
       margin-top: 0.16em;
       margin-bottom: 0.1em;
@@ -611,7 +610,7 @@
       background: rgba(15,23,42,0.84);
       color: #fff;
       padding: 0.8rem 1.1rem;
-      font-size: 1.13rem;
+      font-size: 1.09rem;
       border-radius: 0 0 16px 16px;
       text-align: center;
       font-family: 'Outfit', 'Montserrat', Arial, sans-serif;
@@ -659,7 +658,7 @@
       font-family: 'Montserrat', 'Outfit', Arial, sans-serif;
     }
     @media (max-width: 1200px) {
-      .edu-timeline-modern { max-width: 98vw; gap: 2.2rem; }
+      .edu-timeline-modern { max-width: 95vw; gap: 2.2rem; }
       .edu-item { gap: 1.5rem; padding: 1.2rem 1.1rem 1.2rem 1.1rem; }
       .edu-logo-box { width: 90px; height: 90px; }
       .edu-logo-box img { width: 60px; height: 60px; }
