--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
       <!-- Mainz -->
       <div class="edu-item">
         <div class="edu-logo-box mainz">
-          <img src="mainz-logo.png" alt="Mainz Logo"/>
+          <img src="JGU.jpg" alt="Mainz Logo"/>
         </div>
         <div class="edu-details">
           <div class="edu-row">
@@ -777,7 +777,7 @@
       <!-- Visva-Bharati -->
       <div class="edu-item">
         <div class="edu-logo-box vb">
-          <img src="vb-logo.png" alt="Visva-Bharati Logo"/>
+          <img src="VB.png" alt="Visva-Bharati Logo"/>
         </div>
         <div class="edu-details">
           <div class="edu-row">
