--- a/index.html
+++ b/index.html
@@ -777,7 +777,7 @@
       <!-- Visva-Bharati -->
       <div class="edu-item">
         <div class="edu-logo-box vb">
-          <img src="VB.png" alt="Visva-Bharati Logo"/>
+          <img src="VB.jpg" alt="Visva-Bharati Logo"/>
         </div>
         <div class="edu-details">
           <div class="edu-row">
