--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@
       <!-- Mainz -->
       <div class="edu-item">
         <div class="edu-logo-box mainz">
-          <img src="JGU.jpg" alt="Mainz Logo"/>
+          <img src="JGU2.jpg" alt="Mainz Logo"/>
         </div>
         <div class="edu-details">
           <div class="edu-row">
