--- a/index.html
+++ b/index.html
@@ -838,7 +838,7 @@
     </div>
     <div class="gallery-grid">
       <div class="gallery-item" data-tags="lab">
-        <img src="Retreat.png" alt="Lab work 1" />
+        <img src="retreat2.jpg" alt="Lab work 1" />
         <div class="caption">Laboratory of Axon Growth and Regeneration: Dr. Ishwariya Venkatesh &amp; Team</div>
       </div>
       <div class="gallery-item" data-tags="lab">
