--- a/index.html
+++ b/index.html
@@ -842,8 +842,12 @@
         <div class="caption">Laboratory of Axon Growth and Regeneration: Dr. Ishwariya Venkatesh &amp; Team</div>
       </div>
       <div class="gallery-item" data-tags="lab">
-        <img src="JNCASR2.jpg" alt="Lab work 2" />
+        <img src="chapterkanpur.jpg" alt="Lab work 3" />
         <div class="caption">Chronobiology and Behavioural Neurogenetics Lab: Prof. Dr. Sheeba Basu &amp; Team</div>
+      </div>
+      <div class="gallery-item" data-tags="lab">
+        <img src="JNCASR2.jpg" alt="Lab work 2" />
+        <div class="caption">Social and Affective Cognition Lab : Dr. KM Sharika &amp; Team</div>
       </div>
       <div class="gallery-item" data-tags="lab">
         <img src="ACTREC.jpg" alt="Lab work 3" />
