--- a/index.html
+++ b/index.html
@@ -854,16 +854,16 @@
         <div class="caption">Autophagy Lab: Dr. Pritha Ray &amp; Team</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
-        <img src="IITH.jpg" alt="Conference 1" />
-        <div class="caption">HySci: IIT-Hyderabad Chapter (April, 2024)</div>
+        <img src="hyscif.jpg" alt="Conference 1" />
+        <div class="caption">Presenting at HySci: IIT-Hyderabad Chapter'24</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
         <img src="CMMDR.jpg" alt="Conference 2" />
         <div class="caption">Cellular and Molecular Mechanisms of Development and Regeneration: Shiv Nadar University (Feb, 2024)</div>
       </div>
       <div class="gallery-item" data-tags="conferences">
-        <img src="SURGE.jpg" alt="Conference 3" />
-        <div class="caption">Summer Internship - IIT Kanpur '23</div>
+        <img src="kanpurf.jpg" alt="Conference 3" />
+        <div class="caption">Presenting at SURGE'23 - IIT Kanpur</div>
       </div>
       <div class="gallery-item" data-tags="travels">
         <img src="Travel1.jpg" alt="Travel 1" />
